[gd_scene load_steps=3 format=3 uid="uid://ctqs3kri2prnb"]

[ext_resource type="Theme" uid="uid://dalxhu26t2fae" path="res://themes/menu.tres" id="1_5vqd1"]
[ext_resource type="Script" path="res://scripts/menus/play.gd" id="1_h8igv"]

[node name="PlayMenu" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.0
offset_top = -258.0
offset_right = 183.0
offset_bottom = 267.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5vqd1")
script = ExtResource("1_h8igv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 382.0
offset_bottom = 525.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 35
text = "PLAY"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="StoreButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 35
text = "GO TO THE SHOP
"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="ExitGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 35
text = "EXIT
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StoreButton" to="." method="_on_store_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
